--- a/SparkStackOverflow/pom.xml
+++ b/SparkStackOverflow/pom.xml
@@ -12,6 +12,16 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
   <dependencies>
+  <dependency>
+    <groupId>com.databricks</groupId>
+    <artifactId>spark-avro_2.10</artifactId>
+    <version>3.1.0</version>
+   </dependency>
+   <dependency>
+  <groupId>org.apache.avro</groupId>
+  <artifactId>avro</artifactId>
+  <version>1.8.1</version>
+</dependency>
     <dependency>
         <groupId>com.datastax.spark</groupId>
         <artifactId>spark-cassandra-connector_2.10</artifactId>
@@ -40,6 +50,31 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+      <plugin>
+  <groupId>org.apache.avro</groupId>
+  <artifactId>avro-maven-plugin</artifactId>
+  <version>1.8.1</version>
+  <executions>
+    <execution>
+      <phase>generate-sources</phase>
+      <goals>
+        <goal>schema</goal>
+      </goals>
+      <configuration>
+        <sourceDirectory>${project.basedir}/avro</sourceDirectory>
+        <outputDirectory>${project.basedir}/src</outputDirectory>
+      </configuration>
+    </execution>
+  </executions>
+</plugin>
     </plugins>
+    <resources>
+      <resource>
+        <directory>avro</directory>
+        <includes>
+          <include>**/*.avsc</include>
+        </includes>
+      </resource>
+      </resources>
   </build>
 </project>
