--- a/SparkStackOverflow/pom.xml
+++ b/SparkStackOverflow/pom.xml
@@ -22,6 +22,17 @@
   <artifactId>avro</artifactId>
   <version>1.8.1</version>
 </dependency>
+
+<dependency>
+    <groupId>org.apache.spark</groupId>
+    <artifactId>spark-streaming_2.10</artifactId>
+    <version>2.1.0</version>
+</dependency>
+<dependency>
+    <groupId>org.apache.spark</groupId>
+    <artifactId>spark-streaming-kafka-0-8_2.10</artifactId>
+    <version>2.1.0</version>
+</dependency>
     <dependency>
         <groupId>com.datastax.spark</groupId>
         <artifactId>spark-cassandra-connector_2.10</artifactId>
